# alife-biosphere

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
docs/: README.md  ablation_history_v1.md  adaptive_cycle_and_trust_mechanisms_v1.md  agency_active_sensing_and_control_hierarchies_review_v0.md  aging_senescence_turnover_and_death_review_v0.md  ant_sandbox_build_plan_v1.md  ant_sandbox_build_plan_v2.md  ant_sandbox_gap_audit_v1.md  ant_sandbox_handoff_plan_v1.md  ant_sandbox_hard_metrics_v1.md  ant_sandbox_instinct_pressure_slice_2026-04-22.md  ant_sandbox_instinct_roles_slice_2026-04-22.md  ant_sandbox_long_horizon_construction_route_v1.md  ant_sandbox_m0_substrate_spec_v1.md  ant_sandbox_m10a_lifecycle_slice_2026-04-24.md  ant_sandbox_m10b_genome_v1_slice_2026-04-24.md  ant_sandbox_m10c_mutation_ablation_slice_2026-04-24.md  ant_sandbox_m11_infinite_experiment_runtime_slice_2026-04-24.md  ant_sandbox_m12_checkpoint_observer_slice_2026-04-24.md  ant_sandbox_m12_checkpoint_observer_spec_v1.md  ant_sandbox_m13_branch_comparison_slice_2026-04-24.md  ant_sandbox_m13_branch_comparison_spec_v1.md  ant_sandbox_m14_niche_substrate_slice_2026-04-24.md  ant_sandbox_m14_niche_substrate_spec_v1.md  ant_sandbox_m15_open_endedness_metrics_slice_2026-04-24.md  ant_sandbox_m15_open_endedness_metrics_spec_v1.md  ant_sandbox_m16_successor_life_layer_slice_2026-04-24.md  ant_sandbox_m16_successor_life_layer_spec_v1.md  ant_sandbox_m17_multi_niche_open_evolution_slice_2026-04-25.md  ant_sandbox_m18_economic_stabilization_slice_2026-04-25.md  (+98 more)
(+61 files in other folders)
